--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@react-input/mask": "^2.0.4",
+    "gsap": "^3.12.7",
     "immer": "^10.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -19,6 +20,7 @@
     "react-input-mask": "^2.0.4",
     "react-input-mask-next": "^3.0.0-alpha.12",
     "sass": "^1.83.4",
+    "swiper": "^11.2.1",
     "use-mask-input": "^3.4.2",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
