--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-input/mask": "^2.0.4",
     "gsap": "^3.12.7",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
